git turorial print statement

--- a/file 1.ipynb
+++ b/file 1.ipynb
@@ -287,47 +287,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "e14db2ba-b6ac-4132-9e68-cdb6e89c63f0",
+   "execution_count": 1,
+   "id": "466faee4-0bb4-4a4f-aaee-51ce61d8a009",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "enter the string : hi how\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "new string without space is : hihow\n"
+      "i am learning git \n"
      ]
     }
    ],
    "source": [
-    "s = input(\"enter the string :\").strip()\n",
-    "emp = \"\" # empty string \n",
-    "for i in s:\n",
-    "    if i!=\" \":\n",
-    "        emp = emp+i\n",
-    "\n",
-    "print(\"new string without space is :\",emp)\n"
+    "print(\"i am learning git \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b6173e39-e7f3-429c-89ae-7edf5b12af69",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the string 2\n",
+      "yes the string is not on odd index\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = input(\"enter the string \")\n",
+    "if n == \"2\":\n",
+    "    print(\"yes the string is not on odd index\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "466faee4-0bb4-4a4f-aaee-51ce61d8a009",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6173e39-e7f3-429c-89ae-7edf5b12af69",
+   "id": "ac601859",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -349,7 +349,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
